# openmp-host-to-device-affinity-demonstrator

./: .gitignore  LICENSE  README.md  build_all.sh  env  evaluate.py  graphs.ipynb  memory_benchmark_jobscript_____.sh  memory_benchmark_jobscript___p_.sh  memory_benchmark_jobscript___pu.sh  memory_benchmark_jobscript__c__.sh  memory_benchmark_jobscript__cp_.sh  memory_benchmark_jobscript__cpu.sh  memory_benchmark_jobscript_b___.sh  memory_benchmark_jobscript_b_p_.sh  memory_benchmark_jobscript_b_pu.sh  memory_benchmark_jobscript_bc__.sh  memory_benchmark_jobscript_bcp_.sh  memory_benchmark_jobscript_bcpu.sh  run_all.sh  run_benchmark.py
benchmark/: CMakeLists.txt  Makefile  matrix.cu  matrix.cuh  matrix_example_api.cpp
benchmark/CMakeModules/: OpenMP.cmake
benchmark/app/: CMakeLists.txt  matrix_example_api.cpp
benchmark/cuda/: CMakeLists.txt  matrix.cu  matrix.cuh
benchmark/kernel/: CMakeLists.txt  cuda_kernel.cu  kernel.hpp  memory.hpp  omp_kernel.cpp
benchmark/util/: CMakeLists.txt  cuda_device_distance.cpp  cuda_device_distance.hpp  define.hpp  gpu_distance.cpp  gpu_distance.hpp  system_info.cpp
config/: devices.txt  memory_benchmark.json  memory_benchmark_12threads.json  memory_benchmark_4threads.json  thread_benchmark.json
cuda/: Makefile  hello.cu  main.cpp  matrix.cu
init/: Makefile  gpu.c  gpu.h  main.c
memory_benchmark/____/: memory_benchmark_parsed.json
memory_benchmark/____/raw/: memory_benchmarkspread_12_1024-12_best.output  memory_benchmarkspread_12_1024-12_worst.output  memory_benchmarkspread_12_128-120_best.output  memory_benchmarkspread_12_128-120_worst.output  memory_benchmarkspread_12_160-120_best.output  memory_benchmarkspread_12_160-120_worst.output  memory_benchmarkspread_12_192-120_best.output  memory_benchmarkspread_12_192-120_worst.output  memory_benchmarkspread_12_2048-12_best.output  memory_benchmarkspread_12_2048-12_worst.output  memory_benchmarkspread_12_224-120_best.output  memory_benchmarkspread_12_224-120_worst.output  memory_benchmarkspread_12_256-120_best.output  memory_benchmarkspread_12_256-120_worst.output  memory_benchmarkspread_12_3072-12_best.output  memory_benchmarkspread_12_3072-12_worst.output  memory_benchmarkspread_12_32-120_best.output  memory_benchmarkspread_12_32-120_worst.output  memory_benchmarkspread_12_4096-12_best.output  memory_benchmarkspread_12_4096-12_worst.output  memory_benchmarkspread_12_5120-12_best.output  memory_benchmarkspread_12_5120-12_worst.output  memory_benchmarkspread_12_6144-12_best.output  memory_benchmarkspread_12_6144-12_worst.output  memory_benchmarkspread_12_64-120_best.output  memory_benchmarkspread_12_64-120_worst.output  memory_benchmarkspread_12_7168-12_best.output  memory_benchmarkspread_12_7168-12_worst.output  memory_benchmarkspread_12_8192-12_best.output  memory_benchmarkspread_12_8192-12_worst.output  memory_benchmarkspread_12_96-120_best.output  memory_benchmarkspread_12_96-120_worst.output
memory_benchmark/__p_/: memory_benchmark_parsed.json
memory_benchmark/__p_/raw/: memory_benchmarkspread_12_1024-12_best.output  memory_benchmarkspread_12_1024-12_worst.output  memory_benchmarkspread_12_128-120_best.output  memory_benchmarkspread_12_128-120_worst.output  memory_benchmarkspread_12_160-120_best.output  memory_benchmarkspread_12_160-120_worst.output  memory_benchmarkspread_12_192-120_best.output  memory_benchmarkspread_12_192-120_worst.output  memory_benchmarkspread_12_2048-12_best.output  memory_benchmarkspread_12_2048-12_worst.output  memory_benchmarkspread_12_224-120_best.output  memory_benchmarkspread_12_224-120_worst.output  memory_benchmarkspread_12_256-120_best.output  memory_benchmarkspread_12_256-120_worst.output  memory_benchmarkspread_12_3072-12_best.output  memory_benchmarkspread_12_3072-12_worst.output  memory_benchmarkspread_12_32-120_best.output  memory_benchmarkspread_12_32-120_worst.output  memory_benchmarkspread_12_4096-12_best.output  memory_benchmarkspread_12_4096-12_worst.output  memory_benchmarkspread_12_5120-12_best.output  memory_benchmarkspread_12_5120-12_worst.output  memory_benchmarkspread_12_6144-12_best.output  memory_benchmarkspread_12_6144-12_worst.output  memory_benchmarkspread_12_64-120_best.output  memory_benchmarkspread_12_64-120_worst.output  memory_benchmarkspread_12_7168-12_best.output  memory_benchmarkspread_12_7168-12_worst.output  memory_benchmarkspread_12_8192-12_best.output  memory_benchmarkspread_12_8192-12_worst.output  memory_benchmarkspread_12_96-120_best.output  memory_benchmarkspread_12_96-120_worst.output
memory_benchmark/__pu/: memory_benchmark_parsed.json
memory_benchmark/__pu/raw/: memory_benchmarkspread_12_1024-12_best.output  memory_benchmarkspread_12_1024-12_worst.output  memory_benchmarkspread_12_128-120_best.output  memory_benchmarkspread_12_128-120_worst.output  memory_benchmarkspread_12_160-120_best.output  memory_benchmarkspread_12_160-120_worst.output  memory_benchmarkspread_12_192-120_best.output  memory_benchmarkspread_12_192-120_worst.output  memory_benchmarkspread_12_2048-12_best.output  memory_benchmarkspread_12_2048-12_worst.output  memory_benchmarkspread_12_224-120_best.output  memory_benchmarkspread_12_224-120_worst.output  (+20 more)
memory_benchmark/_c__/: memory_benchmark_parsed.json
memory_benchmark/_cp_/: memory_benchmark_parsed.json
memory_benchmark/_cpu/: memory_benchmark_parsed.json
memory_benchmark/b___/: memory_benchmark_parsed.json
memory_benchmark/b_p_/: memory_benchmark_parsed.json
memory_benchmark/b_pu/: memory_benchmark_parsed.json
memory_benchmark/bc__/: memory_benchmark_parsed.json
memory_benchmark/bcp_/: memory_benchmark_parsed.json
memory_benchmark/bcpu/: memory_benchmark_parsed.json
scripts/: build_all.sh  evaluate.py  load_env.sh  memory_benchmark_jobscript.sh  run_all.sh
src/app/: CMakeLists.txt  matrix_example_api.cpp
src/kernel/: CMakeLists.txt  cuda_kernel.cu  kernel.hpp  memory.cpp  memory.hpp  omp_kernel.cpp
src/util/: CMakeLists.txt  cuda_device_distance.cpp  cuda_device_distance.hpp  define.hpp  string.hpp  system_info.cpp  system_info.hpp
(+288 files in other folders)
